apg4b/C/in_2.txt
./Main.cpp:6:1: error: stray ‘\343’ in program
 　cout << "Hello, world!" << endl;
 ^
./Main.cpp:6:1: error: stray ‘\200’ in program
./Main.cpp:6:1: error: stray ‘\200’ in program
